fix background image loading
404 error when loading background image, re corrected the file path

--- a/assest/styles/scss/_contact.scss
+++ b/assest/styles/scss/_contact.scss
@@ -13,7 +13,7 @@
       rgba($Dust_Blue, 0.2)
     ),
     
-    url('/assest/images/background.jpg') center top;
+    url('../../images/background.jpg') center top;
   background-size: cover;
 
   h2 {
