--- a/assest/styles/scss/_jobs.scss
+++ b/assest/styles/scss/_jobs.scss
@@ -15,7 +15,7 @@
       rgba($Mint, 0.2)
     ),
     
-    url('/assest/images/background.jpg') center top;
+    url('../../images/background.jpg') center top;
     background-size: cover;
     display: flex;
     flex-direction: column;
