--- a/assets/styles/scss/_responsive.scss
+++ b/assets/styles/scss/_responsive.scss
@@ -40,6 +40,7 @@
       align-items: center; 
       justify-content: space-between;
     }
+
   }
 
 
@@ -61,10 +62,18 @@
       grid-template-columns: repeat(3, 1fr);
     }
   }
+
+  .skills-icons {
+    grid-template-columns: repeat(11, 1fr)!important;
+  }
 }
 
 @include media-xl {
   .projects__bioimage {
     height: 50vh;
+  }
+
+  .skills-icons {
+    grid-template-columns: repeat(11, 1fr)!important;   
   }
 }
