--- a/assets/styles/scss/_config.scss
+++ b/assets/styles/scss/_config.scss
@@ -3,6 +3,7 @@ $Gold: #F3B700;
 $Mint: #9FD8CB;
 $Peach: #F4DDD9;
 $Grey_Blue: #E4EAED;
+$White_Alpha: rgba(255, 255, 255, 0.4);
 
 * {
 	box-sizing: border-box;
