--- a/assets/styles/scss/_projects.scss
+++ b/assets/styles/scss/_projects.scss
@@ -53,11 +53,20 @@
 
   &__item {
     position: relative;
-    border-bottom: 5px solid $Mint;
+    background-color: $White_Alpha;
+    border: 2px solid $Mint;
     overflow: hidden;
     cursor: pointer;
-    border-radius: 10px;
-    
+    padding: 1rem;
+    border-radius: 5px;
+
+    .projects__title {
+      color: $Dust_Blue;
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
 
     img {
       width: 100%;     
